# parallel_course_tasks

./: .gitignore
task2/: System_parametrs.md  task1.cpp
task2/task1/: exp_20x20k.txt  exp_40x40k.txt  main.cpp
task2/task2/: app  exp_4000k.txt  main.cpp
task2/task3/: app  exp_40x40k_m1.txt  exp_40x40k_m2.txt  main_dynamic.cpp  main_static.cpp  main_static_with_for.cpp
task3/: CMakeLists.txt
task3/part1/: app  main.cpp  res.txt
task3/part2/src/: Client.cpp  Server.cpp  check.py  main.cpp  out_pow.txt  out_sin.txt  out_sqrt.txt
task4/: main.py
task5/: main.py
task6/: Makefile  therm_cpu.cpp  therm_gpu  therm_gpu.cpp  therm_multi  therm_one
task7/: Makefile  task  task.cpp
task8/: 1  Makefile  main.cu
